# CPP-Course-Tasks

./: BannedWords.cpp  CMakeLists.txt  ComparatorProjection.cpp  CountNumAmongWords.cpp  CreatingNewFiles.cpp  CycleInGraph.cpp  FilteringWords.cpp  FindMostFrequentNumFromFolder.cpp  GenericFolding.cpp  GenericLoop.cpp  GenericSum.cpp  LargestAnagramGroups.cpp  LongestSequence.cpp  MacroPractice.cpp  MaxNestedParanthesesDepth.cpp  OverrideOperatorPlus.cpp  Phone.cpp  PointersPrct.cpp  README.md  RemoveFromVecIF.cpp  RemoveNbiggestElements.cpp  RemoveWhitespaces.cpp  RemovingLinesFromFile.cpp  RemovingNbiggestElements.cpp  SetMapCheatSheet.cpp  SolveQuadraticEquation.cpp  SortSet.cpp  SortingByLastDigit.cpp  SortingFragmentsOfContainers.cpp  SortingViaSet.cpp  SortingWordsByLength.cpp  SplitRangesIntoChunks.cpp  SumNumsFromFile.cpp  SwapSmallestBiggest.cpp  Table.cpp  VecMapping.cpp  VectorScanner.cpp  YourOwnVec.cpp
