cmake_minimum_required(VERSION 3.24)
project(PJATK)

set(CMAKE_CXX_STANDARD 20)

include(FetchContent)
FetchContent_Declare(
        fmt
        GIT_REPOSITORY  https://github.com/fmtlib/fmt
        GIT_TAG         a33701196adfad74917046096bf5a2aa0ab0bb50
)
FetchContent_MakeAvailable(fmt)

add_executable(Program1 SwapSmallestBiggest.cpp)
add_executable(Program2 MacroPractice.cpp)
add_executable(Program3 SolveQuadraticEquation.cpp)
add_executable(Program4 LongestSequence.cpp)
add_executable(Program5 VectorScanner.cpp)
add_executable(Program6 FmtLibrary.cpp)
add_executable(Program7 RemoveFromVecIF.cpp)
add_executable(Program8 SortingFragmentsOfContainers.cpp)
add_executable(Program9 RemovingNbiggestElements.cpp)
add_executable(ProgramA1 RemoveWhitespaces.cpp)
add_executable(ProgramA2 MaxNestedParanthesesDepth.cpp)
add_executable(ProgramA3 SortingViaSet.cpp)
add_executable(ProgramA4 BannedWords.cpp)
add_executable(ProgramA5 justPractice.cpp)
add_executable(ProgramA6 VecMapping.cpp)
add_executable(ProgramA7 ComparatorProjection.cpp)
add_executable(ProgramA8 GenericFolding.cpp)
add_executable(ProgramA9 GenericLoop.cpp)
add_executable(ProgramB1 GenericSum.cpp)
add_executable(ProgramB2 FindMostFrequentNumFromFolder.cpp)
add_executable(ProgramB3 SortSet.cpp)
add_executable(ProgramB4 SortingWordsByLength.cpp)
add_executable(ProgramB5 SplitRangesIntoChunks.cpp)
add_executable(ProgramB6 SumNumsFromFile.cpp)
add_executable(ProgramB7 SortingByLastDigit.cpp)
add_executable(ProgramB8 FilteringWords.cpp)
add_executable(ProgramB9 CountNumAmongWords.cpp)
add_executable(ProgramC1 RemovingLinesFromFile.cpp)
add_executable(ProgramC2 SetMapCheatSheet.cpp)
add_executable(ProgramC3 LargestAnagramGroups.cpp)
add_executable(ProgramC4 CycleInGraph.cpp)
add_executable(ProgramC5 CreatingNewFiles.cpp)
add_executable(ProgramC6 ControlFlowStatement.cpp)
add_executable(ProgramC7 Practice.cpp)
add_executable(ProgramC8 PJC6_T1.cpp)
add_executable(ProgramC9 ShortTestEx1.cpp)
add_executable(ProgramD1 Table.cpp)
add_executable(ProgramD2 Phone.cpp)
add_executable(ProgramD3 IntroductionX.cpp)
add_executable(ProgramD4 YourOwnVec.cpp)
add_executable(ProgramD5 OverrideOperatorPlus.cpp)
add_executable(ProgramD6 PointersPrct.cpp)

target_link_libraries(Program6 fmt)
target_link_libraries(Program7 fmt)
target_link_libraries(ProgramA5 fmt)
target_link_libraries(ProgramA7 fmt)
target_link_libraries(ProgramB9 fmt)
target_link_libraries(ProgramC2 fmt)
target_link_libraries(ProgramB7 fmt)
target_link_libraries(ProgramC1 fmt)
target_link_libraries(ProgramB2 fmt)
target_link_libraries(ProgramC7 fmt)
target_link_libraries(ProgramC8 fmt)
target_link_libraries(ProgramD2 fmt)
target_link_libraries(ProgramD3 fmt)
